kubernetes/apps/base/teleport/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport
spec:
  selector:
    app.kubernetes.io/component: auth
  ports:
    - name: http
      port: 3080
      targetPort: http
